phom_analysis/phom_CCA/logs/archives/phomCCA_u100_989034.err
  File "/scratch/tyoeasley/brain_representations/src_py/lindecomp_phom.py", line 236
    def save_intm_data(outdir,fname,data):
      ^
IndentationError: expected an indented block
